--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -4,7 +4,7 @@
   },
   "nav": {
     "home": "Home",
-    "page1": "Page One",
-    "page2": "Page Two"
+    "hostal": "Hostal",
+    "info": "info"
   }
 }
