--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -52,6 +52,10 @@
     "roomlist": "Habitaciones en el hostal",
     "roomdesc": "Nuestras habitaciones"
 
+  },
+  "vivienda": {
+    "description_atl": "La localización de las viviendas rurales es perfecta si usted busca un ambiente más relajado, fuera del núcleo de la población, pues se sitúan cerca de las calitas de Roche y sus bosques de pinares, del puerto pesquero y por supuesto de los acantilados de Puntalejos. Todos estos enclaves poseen un gran valor medioambiental y paisajístico,siendo lugares de imprescindible visita. En nuestra finca encontrará cuatro unidades de alojamientos completamente independientes las unas de las otras. La distribución de la casa se compone de un gran salón principal, tres habitaciones y baño. Cada cocina está completamente equipada con el material y los electrodomésticos necesarios para que usted se sienta como en casa. Disponemos de televisión satélite y mobiliario de terraza , jardín y de interior. Cada parcela dispone de un cortijo con su propio jardín con piscina, barbacoa y zona de aparcamientos. Cada casa es independiente y garantiza privacidad y relajación."
+
   }
 
 }
