footer, lang select, conilhospeda iamges

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -6,7 +6,8 @@
     "home": "Index",
     "hostal": "Hostal",
     "house": "Rural Housing",
-    "res": "Restaurant"
+    "res": "Restaurant",
+    "lang": "Spanish"
   },  
   "slides": {
   	"explore": "More info",
