--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -6,7 +6,8 @@
     "home": "Inicio",
     "hostal": "Hostal",
     "house": "Casas Rurales",
-    "res": "Restaurante"
+    "res": "Restaurante",
+    "lang": "Inglés"
   },  
   "slides": {
   	"explore": "Más información",
