Fix email form with Mailgun + EmailJS, updated info, upadted maps

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -46,7 +46,7 @@
   	"park": "Parking",
   	"park_info": "Hostal Campito has parking spaces 3 minutes walk from the accommodation price is 10 € per day, booking must first request.",
   	"solarium": "Solarium",
-    "solarium_info": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
+    "solarium_info": "Terrace overlooking the sea in the morning is used for buffet breakfast, the remaining time is used to suit the client.",
     "hours": "Schedule: 19:00-22:00",
   	"charge": "Price: 10€"
   },
