--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -46,7 +46,7 @@
   	"park": "Parking",
   	"park_info": "El Hostal Campito dispone de plazas de garaje a 3 minutos andando del establecimiento, el precio es de 10€ al dia, para reservar hay que solicitarlo previamente.",
   	"solarium": "Solarium",
-    "solarium_info": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
+    "solarium_info": "Solárium con vistas al mar, durante la mañana se utiliza para los desayunos buffet , el tiempo restante se utiliza a gusto del cliente.",
     "hours": "Horario: 19:00-22:00",
   	"charge": "Precio: 10€"
   },
